# bunnies

./: .gitignore  README.md  journal.txt  pyproject.toml
baby/: readme.txt  solution.py  test_solution.py
cake/: solution.py  test_solution.py
elevator/: readme.txt  test_solution.py
first/: readme.txt  solution.py  test_solution.py
fuel/: readme.txt  solution.py  test_solution.py
running/: readme.txt  solution.py  test_solution.py
salute/: readme.txt  solution.py  test_solution.py
second/: solution.py  test_solution.py
staircase/: readme.txt  solution.py  test_solution.py
